	- Added: Ability to set Key Bindings for toggling Move Object and Move Relative Options
	- Added: Lock Frame button besides the close button - When enabled, the frame cannot be moved.
	- Changed: Default 'Step' for Sliders is now in Whole Numbers (Use SHIFT or ALT modifiers to get decimal points), text-entry will auto-round to 4 decimal places.
	- Fixed: Bindings for Halve / Bifold toggle.
	- Fixed: Options set via Binding not saving.
	- Fixed: Scale CheckButton un-checking if you are entering a new scale (now only disables the box when an invalid scale is present, re-enables when valid)
	- Not-Fixed: Compatibility with WIM (chat filter counting) (WIM Breaks everything. Don't use it.)
	- WIP: Auto Update Rot. - Button is added but non-functional as there's no feasible way to get the information needed from the server currently.

	
----------------------------------------

v4.2.0 (Aug 17, 2017)
	- Fixed Up / Down not working until Forward / Back was used once
	- Fixed Up / Down not using the correct number (again, sorry - ACTUALLY FIXED NOW!)
	- Changed saved variables into a table instead of a different saved variable for each one - allows new variables to be added on the fly, and provided some work on using tables and how they work so I can try and make auto-dimensions work later.
	- (b) Fixed a removed function being called, resulting in a Lua Error.

----------------------------------------

v4.1.1 (Aug 7, 2017)
	- Fixed Left / Right & Up / Down using their correct numbers instead of just always using the Length Value. Oops..
	- Introduced Temporary Rotation Step Increment Modifiers: Hold Shift to snap to full degrees, alt to snap to 0.1 degrees, both Alt+Shift to snap to every 5 degrees. Default without any modifiers is still 0.01 degrees.

----------------------------------------

v4.0.0 (Aug 5, 2017)
	- Remade all movement functions to utilize ".gps <dir> <unit>".
	- Remade Chat Clarifiers to filter and gather data from chat messages.